# mft-cli

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
