[package]
name = "mattress-firm-delivery-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = "^0.8"
reqwest = { version = "0.11", features = ["blocking"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"